<resources>
    <string name="app_name">Прогнозирование пассажиропотока</string>
    <string name="registration_name">Личный кабинет</string>
    <string name="editText_name">Введите имя</string>
    <string name="editText_surname">Введите фамилию</string>
    <string name="editText_googleURL">Введите URL гугл диска</string>
    <string name="button_login">Войти</string>
    <string name="button_save">Сохранить</string>
    <string name="button_languageEn">En</string>
    <string name="button_languageRu">Ru</string>
    <string name="description_add_data">to_add_data</string>
    <string name="description_registration">to_registration</string>
    <string name="description_history">to_history></string>
    <string name="add_data_name">Фиксация</string>
    <string name="description_scrollview">add_data</string>
    <string name="editText_bus_stop_name">Введите название остановки</string>
    <string name="editText_bus_next_stop_name">Введите название следующей остановки</string>
    <string name="drop_down_menu_bus_stop">Выберите остановку</string>
    <string name="drop_down_menu_bus_stop_fullness">Выберите заполненность остановки</string>
    <string name="drop_down_menu_transport_type">Выберите тип транспорта</string>
    <string name="drop_down_menu_fullness">Оцените заполненность транспорта</string>
    <string name="drop_down_menu_bus_number">Введите номер маршрута</string>
    <string name="editText_num_in">Введите число вошедших пасажиров</string>
    <string name="editText_num_out">Введите число вышедших пасажиров</string>
    <string name="description_camera">make_photo</string>
    <string name="description_photo">last_photo</string>
    <string name="button_send">Сохранить</string>
    <string name="button_clear">Очистить все поля</string>
    <string name="seekbar_passengers_in">Введите число вошедших пасажиров</string>
    <string name="seekbar_passengers_out">Введите число вышедших пасажиров</string>
    <string name="history_name">История</string>
    <string name="data_saved">Сделано записей:</string>
    <string name="data_sent">Отправлено записей:</string>
    <string name="history_item_out">Вышло:</string>
    <string name="history_item_in">Вошло:</string>
    <string name="button_history_delete">Удалить</string>
    <string name="button_history_send_data">Отправить</string>
    <string name="button_history_clear_all_history">Очистить историю</string>
    <string-array name="stop_fullness">
        <item>Заполненность</item>
        <item>Пустая</item>
        <item>~7 человек</item>
        <item>~15 человек</item>
        <item>~20 человек</item>
        <item>Переполненная</item>
    </string-array>
    <string-array name="transport_options">
        <item>Транспорт</item>
        <item>Автобус</item>
        <item>Сочлененный автобус </item>
        <item>Микроавтобус</item>
        <item>Троллейбус</item>
        <item>Маршрутка</item>
    </string-array>
    <string-array name="transport_fullness">
        <item>Заполненность</item>
        <item>Почти или полностью пустой</item>
        <item>Занята половина сидячих мест</item>
        <item>Заняты все сидячие места</item>
        <item>заняты все сидячие и половина стоячих мест</item>
        <item>Нет места</item>
    </string-array>
    <string-array name="bus_options">
        <item>Номер маршрута</item>
        <item>1</item>
        <item>1А</item>
        <item>2</item>
        <item>2А</item>
        <item>3</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>11А</item>
        <item>12</item>
        <item>12А</item>
        <item>13</item>
        <item>13А</item>
        <item>14</item>
        <item>14Б</item>
        <item>14Ш</item>
        <item>15А</item>
        <item>15Б</item>
        <item>15В</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>21А</item>
        <item>21Б</item>
        <item>22</item>
        <item>23</item>
        <item>23А</item>
        <item>23Б</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>29</item>
        <item>30</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>37А</item>
        <item>38</item>
        <item>39</item>
        <item>39А</item>
        <item>39Б</item>
        <item>41</item>
        <item>42</item>
        <item>44</item>
        <item>44А</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>77</item>
    </string-array>
    <string-array name="trolleybus_options">
        <item>Номер маршрута</item>
        <item>100</item>
        <item>101</item>
        <item>101А</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>106А</item>
        <item>107</item>
        <item>108</item>
        <item>108А</item>
        <item>110</item>
    </string-array>
    <string-array name="minibus_options">
        <item>Номер маршрута</item>
        <item>№1</item>
        <item>№2</item>
        <item>№4</item>
        <item>№5</item>
        <item>№6</item>
        <item>№7</item>
        <item>№9</item>
        <item>№10</item>
        <item>№12</item>
        <item>№15</item>
        <item>№17</item>
        <item>№18</item>
        <item>№19</item>
        <item>№20</item>
        <item>№21</item>
        <item>№23</item>
        <item>№25</item>
        <item>№35</item>
    </string-array>
    <string-array name="error_optins">
        <item>Выберите тип транспорта</item>
    </string-array>
</resources>