<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp"
        android:background="@drawable/boxed_background_light_purple">

        <ImageButton
            android:id="@+id/imageButtonAddDataINRegistration"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/boxed_background_light_purple"
            android:contentDescription="@string/description_add_data"
            android:onClick="startNewActivity"
            app:srcCompat="@android:drawable/ic_menu_add" />


        <ImageButton
            android:id="@+id/imageButtonRegistrationINRegistration"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:background="@drawable/boxed_background_grey"
            android:contentDescription="@string/description_registration"
            app:srcCompat="@android:drawable/ic_menu_myplaces"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/imageButtonAddDataINRegistration"
            android:layout_toRightOf="@+id/imageButtonAddDataINRegistration" />

        <ImageButton
            android:id="@+id/imageButtonHistoryINRegistration"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/imageButtonAddDataINRegistration"
            android:layout_toLeftOf="@+id/imageButtonAddDataINRegistration"
            android:background="@drawable/boxed_background_light_purple"
            android:contentDescription="@string/description_history"
            android:src="@android:drawable/ic_menu_recent_history" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/backgroundRegistration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_background_white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textRegistration">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLanguageRu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:text="@string/button_languageRu"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonLanguageEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:layout_marginTop="5dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:text="@string/button_languageEn"
                android:textSize="20sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editText_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editText_surname"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/editTextPatronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editText_patronymic"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/editTextURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editText_googleURL"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/button_login" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundRegistration" />

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/registration_name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>